# text-sandbox-engine

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: phase8-desktop.yml
docs/: evolvable_text_sandbox_engine_plan.txt  phase_0_content_schema_draft.md  phase_0_core_interfaces.md  phase_10_completion_report.md  phase_10_world_entity_editor_plan.md  phase_10_world_entity_editor_usage.md  phase_6_data_format_revision_notes.md  phase_6_medieval_vertical_slice_report.md  phase_6_module_gap_list.md  phase_7_formal_gameplay_modules_report.md  phase_8_editor_usage.md  phase_8_editor_visualization_extension_plan.md  phase_9_completion_report.md  phase_9_low_code_content_authoring_plan.md  phase_9_low_code_editor_usage.md  phase_9_low_code_protocol.md  professional_text_sandbox_engine_architecture.txt  usage_guide.md
editor/: README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
editor/src/: App.tsx  EntityWorkspace.tsx  LowCodeWidgets.tsx  api.ts  entityWorkspace.test.tsx  lowCode.test.tsx  react-cytoscapejs.d.ts  styles.css
examples/: minimal_world_state.json
examples/commands/: playable_loop.json
examples/medieval_town/: world_state.json
schemas/content/: entity.schema.json  (+1 more)
scripts/: create_tauri_icon.py  editor_api_entry.py  package_editor.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tests/: test_diagnostics.py  test_editor_service.py  test_medieval_vertical_slice.py  test_phase_10_entity_e2e.py  test_phase_7_modules.py  test_phase_9_low_code_e2e.py  test_runtime.py
(+40 files in other folders)
