[project]
name = "text-sandbox-engine"
version = "0.1.0"
description = "A modular, command-driven text sandbox engine prototype."
requires-python = ">=3.11"

[project.scripts]
text-sandbox-engine = "text_sandbox_engine.cli:main"
text-sandbox-editor-api = "text_sandbox_editor_api.__main__:main"

[project.optional-dependencies]
editor = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
]
packaging = [
    "pyinstaller>=6.10",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
