[package]
name = "text-sandbox-editor"
version = "0.1.0"
description = "Offline desktop shell for Text Sandbox Editor"
authors = ["Text Sandbox Engine"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
